Mở rộng nội dung các bài blog và cập nhật UI tiếng Việt