@@ -10,34 +10,984 @@ tags: ["Java", "JavaScript", "Lập trình"]
 categories: ["Lập trình"]
 ---
 
-## Java
-- Quản lý bộ nhớ qua JVM.  
-- Có Heap, Stack.  
-- Garbage Collector tự động dọn dẹp.  
+## Giới thiệu
 
-Ví dụ:
+Quản lý bộ nhớ là một trong những khái niệm quan trọng nhất trong lập trình, nhưng cũng là chủ đề khiến nhiều developer đau đầu. Trong khi các ngôn ngữ như C/C++ yêu cầu bạn phải tự quản lý bộ nhớ (cấp phát và giải phóng), Java và JavaScript đều có cơ chế **Garbage Collection (GC)** tự động.
+
+Vậy **Garbage Collection** hoạt động như thế nào? Có khác biệt gì giữa Java và JavaScript? Và làm sao để tránh **Memory Leak** (rò rỉ bộ nhớ)? Hãy cùng tìm hiểu chi tiết trong bài viết này.
+
+## Tại sao cần quản lý bộ nhớ?
+
+### Vấn đề với quản lý bộ nhớ thủ công
+
+Trong C/C++, bạn phải tự quản lý bộ nhớ:
+
+```c
+// C - Cấp phát bộ nhớ
+int* arr = (int*)malloc(100 * sizeof(int));
+
+// Sử dụng...
+
+// Phải nhớ giải phóng
+free(arr);
+```
+
+**Vấn đề:**
+- ❌ Quên `free()` → **Memory Leak** (rò rỉ bộ nhớ)
+- ❌ `free()` nhiều lần → **Double Free** (crash)
+- ❌ Sử dụng sau khi `free()` → **Use After Free** (lỗi nghiêm trọng)
+
+### Giải pháp: Garbage Collection
+
+Java và JavaScript sử dụng **Garbage Collection** - một cơ chế tự động phát hiện và giải phóng bộ nhớ không còn sử dụng.
+
+**Ưu điểm:**
+- ✅ Developer không phải lo về memory management
+- ✅ Giảm bugs liên quan đến bộ nhớ
+- ✅ Code đơn giản hơn, tập trung vào logic
+
+**Nhược điểm:**
+- ⚠️ Overhead về performance (GC chạy tốn tài nguyên)
+- ⚠️ Không kiểm soát chính xác thời điểm giải phóng
+- ⚠️ Vẫn có thể gặp Memory Leak nếu code không tốt
+
+## Quản lý bộ nhớ trong Java
+
+### Kiến trúc bộ nhớ JVM
+
+Java Virtual Machine (JVM) chia bộ nhớ thành các vùng chính:
+
+```
+┌─────────────────────────────────────┐
+│           JVM Memory                │
+├─────────────────────────────────────┤
+│  Heap (Young Gen + Old Gen)         │ ← Objects
+│  - Eden Space                       │
+│  - Survivor Space (S0, S1)          │
+│  - Old Generation                   │
+├─────────────────────────────────────┤
+│  Stack                              │ ← Method calls, local vars
+├─────────────────────────────────────┤
+│  Method Area                        │ ← Class metadata
+├─────────────────────────────────────┤
+│  Native Method Stack                │ ← JNI calls
+└─────────────────────────────────────┘
+```
+
+### 1. Heap Memory
+
+**Heap** là nơi lưu trữ tất cả objects và arrays:
 
 ```java
-String s = new String("Hello");
+public class MemoryExample {
+    public static void main(String[] args) {
+        // Object được tạo trên Heap
+        Person person = new Person("John", 30);
+        
+        // Array cũng trên Heap
+        int[] numbers = new int[100];
+        
+        // String pool (trong Heap)
+        String s1 = "Hello";
+        String s2 = new String("Hello");
+    }
+}
 ```
 
-## JavaScript
+**Heap được chia thành:**
 
-* Quản lý qua cơ chế Mark-and-Sweep.
-* Tự động loại bỏ biến không còn tham chiếu.
+#### Young Generation (Thế hệ trẻ)
+- **Eden Space**: Nơi objects mới được tạo
+- **Survivor Space (S0, S1)**: Objects sống sót sau Minor GC
 
-Ví dụ:
+#### Old Generation (Thế hệ già)
+- Objects tồn tại lâu được chuyển đến đây
+- Ít GC hơn Young Gen
+
+### 2. Stack Memory
+
+**Stack** lưu trữ:
+- Method calls
+- Local variables
+- References đến objects (không phải object thực)
+
+```java
+public void calculateSum() {
+    int a = 10;        // Stack
+    int b = 20;        // Stack
+    int sum = a + b;   // Stack
+    
+    Person p = new Person("Alice", 25);
+    // p (reference) → Stack
+    // Person object → Heap
+}
+```
+
+**Đặc điểm Stack:**
+- LIFO (Last In First Out)
+- Tự động giải phóng khi method kết thúc
+- Nhanh hơn Heap
+- Kích thước nhỏ hơn Heap
+
+### 3. Garbage Collection trong Java
+
+#### Cách hoạt động
+
+GC tự động giải phóng objects không còn được tham chiếu:
+
+```java
+public class GCExample {
+    public static void main(String[] args) {
+        // Tạo object
+        String str1 = new String("Hello");
+        
+        // str1 tham chiếu đến object "Hello"
+        System.out.println(str1);
+        
+        // Gán null → object "Hello" không còn được tham chiếu
+        str1 = null;
+        
+        // GC sẽ tự động dọn dẹp object "Hello"
+        System.gc(); // Gợi ý JVM chạy GC (không bắt buộc)
+    }
+}
+```
+
+#### Các loại Garbage Collector
+
+**1. Serial GC** (Default cho client machines)
+- Single-threaded
+- Đơn giản, phù hợp ứng dụng nhỏ
+
+**2. Parallel GC** (Default từ Java 8)
+- Multi-threaded
+- Tốt cho throughput
+
+**3. CMS (Concurrent Mark Sweep)**
+- Low pause times
+- Chạy concurrent với application
+
+**4. G1 GC** (Default từ Java 9+)
+- Balanced giữa throughput và latency
+- Tự động tuning
+
+**5. ZGC** (Java 11+)
+- Ultra-low pause times (<10ms)
+- Cho ứng dụng lớn
+
+#### GC Phases
+
+**Minor GC** (Young Generation):
+```
+Eden Space đầy → Minor GC
+  ↓
+Sao chép objects còn sống → Survivor Space
+  ↓
+Tăng age counter
+  ↓
+Age > threshold → Promote to Old Gen
+```
+
+**Major GC** (Old Generation):
+```
+Old Gen đầy → Major GC (chậm hơn)
+  ↓
+Mark objects còn sống
+  ↓
+Sweep (dọn dẹp) objects chết
+  ↓
+Compact (optional) - sắp xếp lại bộ nhớ
+```
+
+### Code ví dụ: Theo dõi GC
+
+```java
+public class GCMonitoring {
+    public static void main(String[] args) {
+        // Thông tin bộ nhớ
+        Runtime runtime = Runtime.getRuntime();
+        
+        System.out.println("Max Memory: " + runtime.maxMemory() / 1024 / 1024 + " MB");
+        System.out.println("Total Memory: " + runtime.totalMemory() / 1024 / 1024 + " MB");
+        System.out.println("Free Memory: " + runtime.freeMemory() / 1024 / 1024 + " MB");
+        
+        // Tạo nhiều objects
+        List<String> list = new ArrayList<>();
+        for (int i = 0; i < 1000000; i++) {
+            list.add("String " + i);
+        }
+        
+        System.out.println("\nSau khi tạo objects:");
+        System.out.println("Free Memory: " + runtime.freeMemory() / 1024 / 1024 + " MB");
+        
+        // Xóa reference
+        list = null;
+        
+        // Gợi ý GC
+        System.gc();
+        
+        System.out.println("\nSau GC:");
+        System.out.println("Free Memory: " + runtime.freeMemory() / 1024 / 1024 + " MB");
+    }
+}
+```
+
+### JVM Options cho GC
+
+```bash
+# Chọn G1 GC
+java -XX:+UseG1GC MyApp
+
+# Set heap size
+java -Xms512m -Xmx2g MyApp
+
+# Print GC logs
+java -Xlog:gc* MyApp
+
+# GC tuning
+java -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=4 MyApp
+```
+
+## Quản lý bộ nhớ trong JavaScript
+
+### Kiến trúc bộ nhớ V8 Engine
+
+V8 (Chrome, Node.js) quản lý bộ nhớ tương tự Java nhưng đơn giản hơn:
+
+```
+┌─────────────────────────────────────┐
+│       V8 Engine Memory              │
+├─────────────────────────────────────┤
+│  Heap                               │
+│  - New Space (Young Generation)     │
+│  - Old Space (Old Generation)       │
+│  - Large Object Space               │
+│  - Code Space                       │
+├─────────────────────────────────────┤
+│  Stack                              │
+│  - Call Stack                       │
+│  - Execution Context                │
+└─────────────────────────────────────┘
+```
+
+### 1. Stack vs Heap trong JavaScript
+
+#### Stack (Primitive values)
 
 ```javascript
-let a = {name: "Minh"};
-a = null; // biến sẽ được dọn dẹp
+// Stack - Primitive types
+let num = 42;           // Number
+let str = "Hello";      // String (primitive)
+let bool = true;        // Boolean
+let nothing = null;     // Null
+let notDefined;         // Undefined
+
+// Copy by value
+let x = 10;
+let y = x;  // y là copy của x
+y = 20;
+console.log(x); // 10 (không đổi)
 ```
 
-**Lưu ý để tránh Memory Leak**
+#### Heap (Reference types)
 
-* Không giữ tham chiếu không cần thiết.
-* Hạn chế global variables.
+```javascript
+// Heap - Reference types
+let obj = { name: "John" };     // Object
+let arr = [1, 2, 3];            // Array
+let func = function() {};       // Function
+
+// Copy by reference
+let person1 = { name: "Alice" };
+let person2 = person1;  // person2 trỏ đến cùng object
+person2.name = "Bob";
+console.log(person1.name); // "Bob" (đã thay đổi!)
+```
+
+### 2. Garbage Collection trong JavaScript
+
+JavaScript sử dụng thuật toán **Mark-and-Sweep**:
+
+#### Cách hoạt động Mark-and-Sweep
+
+```
+1. MARK Phase:
+   ├─ Bắt đầu từ GC Roots (global, stack)
+   ├─ Đánh dấu tất cả objects có thể reach được
+   └─ Đánh dấu recursive qua references
+
+2. SWEEP Phase:
+   ├─ Quét toàn bộ Heap
+   ├─ Giải phóng objects không được đánh dấu
+   └─ Compact memory (optional)
+```
+
+#### Ví dụ minh họa
+
+```javascript
+// GC Roots
+let globalVar = { data: "Global" };
+
+function createObjects() {
+    // Local variables
+    let obj1 = { name: "Object 1" };
+    let obj2 = { name: "Object 2", ref: obj1 };
+    
+    // obj1 và obj2 được reach từ stack
+    return obj2;
+}
+
+let result = createObjects();
+// Sau khi function kết thúc:
+// - obj2 vẫn accessible qua 'result'
+// - obj1 vẫn accessible qua obj2.ref
+// - Cả 2 đều KHÔNG bị GC
+
+result = null;
+// Giờ obj2 và obj1 không còn accessible
+// GC sẽ dọn dẹp cả 2
+```
+
+#### Reference Counting (cũ, không còn dùng)
+
+Vấn đề với Reference Counting:
+
+```javascript
+// Circular reference
+function createCircular() {
+    let obj1 = {};
+    let obj2 = {};
+    
+    obj1.ref = obj2;  // obj1 → obj2
+    obj2.ref = obj1;  // obj2 → obj1
+    
+    return "Done";
+}
+
+createCircular();
+// Reference Counting: obj1 và obj2 vẫn có count > 0 → Memory Leak!
+// Mark-and-Sweep: Không reach được từ roots → Được dọn dẹp ✓
+```
+
+### 3. Generational GC trong V8
+
+#### Young Generation (New Space)
+
+```javascript
+// Objects mới được tạo ở New Space
+let temp1 = { data: "Temporary" };
+let temp2 = [1, 2, 3];
+
+// Minor GC chạy thường xuyên (rất nhanh)
+// Objects không còn dùng bị dọn ngay
+```
+
+**Scavenger Algorithm:**
+- Chia New Space thành 2 semi-spaces
+- Copy objects còn sống sang space khác
+- Rất nhanh cho objects ngắn hạn
+
+#### Old Generation (Old Space)
+
+```javascript
+// Objects tồn tại lâu được promote
+let longLived = { 
+    cache: {},
+    config: {}
+};
+
+// Major GC chạy ít hơn (chậm hơn)
+// Sử dụng Mark-Sweep-Compact
+```
+
+### Code ví dụ: Theo dõi memory
+
+```javascript
+// Node.js - Kiểm tra memory usage
+function checkMemory() {
+    const used = process.memoryUsage();
+    
+    console.log('Memory Usage:');
+    for (let key in used) {
+        console.log(`${key}: ${Math.round(used[key] / 1024 / 1024 * 100) / 100} MB`);
+    }
+}
+
+checkMemory();
+
+// Tạo nhiều objects
+const largeArray = [];
+for (let i = 0; i < 1000000; i++) {
+    largeArray.push({ id: i, data: `Item ${i}` });
+}
+
+console.log('\nSau khi tạo objects:');
+checkMemory();
+
+// Trigger GC (nếu có flag --expose-gc)
+if (global.gc) {
+    global.gc();
+    console.log('\nSau khi GC:');
+    checkMemory();
+}
+
+// Output:
+// Memory Usage:
+// rss: 21.5 MB       (Resident Set Size)
+// heapTotal: 4.5 MB  (Total Heap)
+// heapUsed: 2.3 MB   (Used Heap)
+// external: 0.9 MB   (C++ objects)
+```
+
+### Browser DevTools
+
+```javascript
+// Chrome DevTools - Memory Profiling
+
+// 1. Heap Snapshot
+console.log("Take heap snapshot now!");
+
+// 2. Allocation Timeline
+const objects = [];
+setInterval(() => {
+    objects.push(new Array(1000).fill('data'));
+}, 100);
+
+// 3. Performance Monitor
+// F12 → Performance → Record → Analyze
+```
+
+## So sánh Java vs JavaScript
+
+| Đặc điểm | Java | JavaScript |
+|----------|------|------------|
+| **Engine** | JVM | V8, SpiderMonkey, etc. |
+| **Bộ nhớ** | Heap + Stack rõ ràng | Heap + Stack ít rõ ràng hơn |
+| **GC Algorithm** | Nhiều lựa chọn (Serial, Parallel, G1, ZGC) | Mark-and-Sweep |
+| **Generations** | Young + Old (chi tiết) | New + Old (đơn giản hơn) |
+| **Tuning** | Nhiều options (-Xmx, -Xms, etc.) | Ít options hơn |
+| **Control** | Có thể điều chỉnh GC behavior | Ít control hơn |
+| **Performance** | Tốt cho long-running apps | Tốt cho short-lived operations |
+
+## Memory Leaks - Nguyên nhân và cách khắc phục
+
+### Memory Leak là gì?
+
+**Memory Leak** xảy ra khi bộ nhớ không được giải phóng dù không còn sử dụng, dẫn đến:
+- 🔴 Ứng dụng chậm dần
+- 🔴 Tăng memory usage liên tục
+- 🔴 Crash khi hết RAM
+
+### Memory Leaks trong Java
+
+#### 1. Static Collections
+
+```java
+// ❌ BAD - Memory Leak
+public class Cache {
+    private static List<Object> cache = new ArrayList<>();
+    
+    public void addToCache(Object obj) {
+        cache.add(obj);  // Không bao giờ xóa → Memory Leak!
+    }
+}
+
+// ✅ GOOD - Sử dụng WeakHashMap
+public class BetterCache {
+    private static WeakHashMap<Object, Object> cache = new WeakHashMap<>();
+    
+    public void addToCache(Object key, Object value) {
+        cache.put(key, value);  // GC có thể dọn khi cần
+    }
+}
+```
+
+#### 2. Unclosed Resources
+
+```java
+// ❌ BAD - Resource leak
+public void readFile() throws IOException {
+    BufferedReader reader = new BufferedReader(new FileReader("file.txt"));
+    String line = reader.readLine();
+    // Quên close() → Leak!
+}
+
+// ✅ GOOD - Try-with-resources
+public void readFileSafely() throws IOException {
+    try (BufferedReader reader = new BufferedReader(new FileReader("file.txt"))) {
+        String line = reader.readLine();
+        // Tự động close()
+    }
+}
+```
+
+#### 3. Thread Local Variables
+
+```java
+// ❌ BAD
+public class ThreadLocalLeak {
+    private static ThreadLocal<List<Object>> threadLocal = new ThreadLocal<>();
+    
+    public void doWork() {
+        threadLocal.set(new ArrayList<>());
+        // Không remove() → Leak nếu thread pool!
+    }
+}
+
+// ✅ GOOD
+public class ThreadLocalFixed {
+    private static ThreadLocal<List<Object>> threadLocal = new ThreadLocal<>();
+    
+    public void doWork() {
+        try {
+            threadLocal.set(new ArrayList<>());
+            // Use threadLocal...
+        } finally {
+            threadLocal.remove();  // Quan trọng!
+        }
+    }
+}
+```
+
+#### 4. Inner Classes giữ reference
+
+```java
+// ❌ BAD - Inner class giữ reference đến outer class
+public class OuterClass {
+    private byte[] largeData = new byte[1000000];
+    
+    public InnerClass getInner() {
+        return new InnerClass();  // Leak: giữ reference đến OuterClass!
+    }
+    
+    class InnerClass {
+        // Implicitly holds reference to OuterClass
+    }
+}
+
+// ✅ GOOD - Static inner class
+public class OuterClass {
+    private byte[] largeData = new byte[1000000];
+    
+    public InnerClass getInner() {
+        return new InnerClass();  // OK: không giữ reference
+    }
+    
+    static class InnerClass {
+        // Không giữ reference đến OuterClass
+    }
+}
+```
+
+### Memory Leaks trong JavaScript
+
+#### 1. Global Variables
+
+```javascript
+// ❌ BAD - Accidental global
+function createUser() {
+    user = { name: "John" };  // Quên let/const → Global!
+}
+
+createUser();
+// 'user' giờ là global → Không bao giờ bị GC
+
+// ✅ GOOD - Sử dụng strict mode
+'use strict';
+
+function createUser() {
+    let user = { name: "John" };  // Local variable
+}
+```
+
+#### 2. Forgotten Timers/Callbacks
+
+```javascript
+// ❌ BAD - Setinterval không clear
+function startCounter() {
+    let count = 0;
+    const data = new Array(1000000).fill('data');
+    
+    setInterval(() => {
+        count++;
+        console.log(count);
+        // 'data' vẫn được reference → Memory Leak!
+    }, 1000);
+}
+
+// ✅ GOOD - Clear interval
+function startCounterSafely() {
+    let count = 0;
+    const data = new Array(1000000).fill('data');
+    
+    const intervalId = setInterval(() => {
+        count++;
+        console.log(count);
+        
+        if (count >= 10) {
+            clearInterval(intervalId);  // Dọn dẹp!
+        }
+    }, 1000);
+    
+    return intervalId;
+}
+```
+
+#### 3. Event Listeners không remove
+
+```javascript
+// ❌ BAD - Event listener không remove
+class ComponentLeak {
+    constructor() {
+        this.largeData = new Array(1000000);
+        
+        window.addEventListener('resize', () => {
+            console.log(this.largeData.length);
+        });
+        // Khi component destroy, listener vẫn tồn tại!
+    }
+}
+
+// ✅ GOOD - Remove listener
+class ComponentFixed {
+    constructor() {
+        this.largeData = new Array(1000000);
+        
+        this.handleResize = () => {
+            console.log(this.largeData.length);
+        };
+        
+        window.addEventListener('resize', this.handleResize);
+    }
+    
+    destroy() {
+        window.removeEventListener('resize', this.handleResize);
+    }
+}
+```
+
+#### 4. Detached DOM nodes
+
+```javascript
+// ❌ BAD - Giữ reference đến DOM đã xóa
+let detachedNodes = [];
+
+function createAndRemove() {
+    const div = document.createElement('div');
+    document.body.appendChild(div);
+    
+    detachedNodes.push(div);  // Lưu reference
+    
+    document.body.removeChild(div);  // Remove khỏi DOM
+    // Nhưng vẫn tồn tại trong detachedNodes → Leak!
+}
+
+// ✅ GOOD - Xóa reference
+let nodes = [];
+
+function createAndRemoveSafely() {
+    const div = document.createElement('div');
+    document.body.appendChild(div);
+    
+    nodes.push(div);
+    
+    // Khi không cần nữa
+    document.body.removeChild(div);
+    nodes = nodes.filter(node => node !== div);  // Xóa reference
+}
+```
+
+#### 5. Closures giữ reference
+
+```javascript
+// ❌ BAD - Closure giữ large data
+function createClosure() {
+    const largeData = new Array(1000000).fill('data');
+    
+    return function() {
+        console.log('Hello');
+        // Không dùng largeData nhưng vẫn giữ reference!
+    };
+}
+
+const fn = createClosure();  // largeData không được GC
+
+// ✅ GOOD - Chỉ giữ data cần thiết
+function createClosureSafely() {
+    const largeData = new Array(1000000).fill('data');
+    const summary = `Data length: ${largeData.length}`;
+    
+    return function() {
+        console.log(summary);  // Chỉ giữ summary, không giữ largeData
+    };
+}
+```
+
+## Best Practices - Tránh Memory Leaks
+
+### Java Best Practices
+
+1. **Sử dụng try-with-resources**
+```java
+try (Connection conn = getConnection()) {
+    // Tự động close
+}
+```
+
+2. **Null out references khi không dùng**
+```java
+public void process() {
+    List<Object> list = new ArrayList<>();
+    // Process...
+    list = null;  // Giúp GC
+}
+```
+
+3. **Sử dụng WeakReference cho caches**
+```java
+WeakHashMap<Key, Value> cache = new WeakHashMap<>();
+```
+
+4. **Tránh static collections lớn**
+```java
+// ❌ Tránh
+private static List<Object> cache = new ArrayList<>();
+
+// ✅ Hoặc limit size
+private static LRUCache<Object> cache = new LRUCache<>(1000);
+```
+
+5. **Monitor với tools**
+- VisualVM
+- JProfiler
+- YourKit
+- Eclipse MAT
+
+### JavaScript Best Practices
+
+1. **Luôn dùng let/const**
+```javascript
+// ✅ GOOD
+let user = { name: "John" };
+const MAX = 100;
+```
+
+2. **Clean up subscriptions**
+```javascript
+// React example
+useEffect(() => {
+    const subscription = api.subscribe();
+    
+    return () => {
+        subscription.unsubscribe();  // Cleanup!
+    };
+}, []);
+```
+
+3. **WeakMap/WeakSet cho metadata**
+```javascript
+const metadata = new WeakMap();
+
+function attachMeta(obj, data) {
+    metadata.set(obj, data);
+    // Khi obj bị GC, data cũng bị GC
+}
+```
+
+4. **Limit cache size**
+```javascript
+class LRUCache {
+    constructor(maxSize) {
+        this.maxSize = maxSize;
+        this.cache = new Map();
+    }
+    
+    set(key, value) {
+        if (this.cache.size >= this.maxSize) {
+            const firstKey = this.cache.keys().next().value;
+            this.cache.delete(firstKey);
+        }
+        this.cache.set(key, value);
+    }
+}
+```
+
+5. **Sử dụng Chrome DevTools**
+```javascript
+// Take heap snapshot
+// Performance → Memory → Record
+
+// Analyze memory timeline
+// Tìm retained objects
+```
+
+## Tools để debug Memory Issues
+
+### Java Tools
+
+**1. VisualVM**
+```bash
+# Start VisualVM
+jvisualvm
+
+# Attach to process
+# Monitor → Heap, GC, Threads
+```
+
+**2. Heap Dump Analysis**
+```bash
+# Generate heap dump
+jmap -dump:format=b,file=heap.bin <pid>
+
+# Analyze với Eclipse MAT
+# File → Open Heap Dump → Leak Suspects
+```
+
+**3. JVM Flags**
+```bash
+# GC logging
+-Xlog:gc*:file=gc.log
+
+# Heap dump on OOM
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/path/to/dump
+
+# Max heap size
+-Xmx2g
+```
+
+### JavaScript Tools
+
+**1. Chrome DevTools**
+```
+F12 → Memory tab
+├─ Heap Snapshot (current state)
+├─ Allocation instrumentation (timeline)
+├─ Allocation sampling (lightweight)
+└─ Compare snapshots (find leaks)
+```
+
+**2. Node.js memory profiling**
+```bash
+# Run with --inspect
+node --inspect server.js
+
+# Chrome → chrome://inspect
+# Open DevTools → Memory
+
+# Or use clinic.js
+npm install -g clinic
+clinic doctor -- node server.js
+```
+
+**3. heapdump module**
+```javascript
+const heapdump = require('heapdump');
+
+// Trigger heap dump
+heapdump.writeSnapshot((err, filename) => {
+    console.log('Heap dump:', filename);
+});
+```
+
+## Performance Tips
+
+### Java Performance
+
+```java
+// ✅ Reuse objects
+StringBuilder sb = new StringBuilder();
+for (int i = 0; i < 1000; i++) {
+    sb.append(i);  // Tốt hơn String concatenation
+}
+
+// ✅ Set initial capacity
+List<String> list = new ArrayList<>(1000);
+
+// ✅ Use primitive arrays khi có thể
+int[] numbers = new int[1000];  // Tốt hơn Integer[]
+```
+
+### JavaScript Performance
+
+```javascript
+// ✅ Object pooling
+class ObjectPool {
+    constructor(factory) {
+        this.factory = factory;
+        this.pool = [];
+    }
+    
+    acquire() {
+        return this.pool.pop() || this.factory();
+    }
+    
+    release(obj) {
+        this.pool.push(obj);
+    }
+}
+
+// ✅ Reuse arrays
+const tempArray = [];
+function process() {
+    tempArray.length = 0;  // Clear thay vì tạo mới
+    // Use tempArray...
+}
+
+// ✅ Avoid creating functions trong loops
+// ❌ BAD
+for (let i = 0; i < 1000; i++) {
+    arr[i].onClick = function() { console.log(i); };
+}
+
+// ✅ GOOD
+function handleClick(index) {
+    console.log(index);
+}
+for (let i = 0; i < 1000; i++) {
+    arr[i].onClick = () => handleClick(i);
+}
+```
 
 ## Kết luận
 
-Cả Java và JS đều giúp lập trình viên không phải quản lý bộ nhớ thủ công, nhưng cần viết code cẩn thận để tránh rò rỉ.
+Quản lý bộ nhớ là một chủ đề phức tạp nhưng vô cùng quan trọng. Mặc dù Java và JavaScript đều có Garbage Collection tự động, developer vẫn cần hiểu cách chúng hoạt động để:
+
+✅ **Tối ưu performance**  
+✅ **Tránh memory leaks**  
+✅ **Debug memory issues**  
+✅ **Xây dựng ứng dụng ổn định**  
+
+### Điểm chính cần nhớ:
+
+**Java:**
+- JVM quản lý Heap và Stack rõ ràng
+- Nhiều loại GC: Serial, Parallel, G1, ZGC
+- Có thể tuning với JVM flags
+- Tools: VisualVM, JProfiler, Eclipse MAT
+
+**JavaScript:**
+- V8 sử dụng Mark-and-Sweep
+- Generational GC (Young + Old)
+- Ít control hơn Java
+- Tools: Chrome DevTools, Node.js inspector
+
+**Memory Leaks phổ biến:**
+- Static collections (Java)
+- Global variables (JavaScript)
+- Event listeners không remove
+- Closures giữ references không cần thiết
+- Circular references
+
+**Best Practices:**
+- Clean up resources (close, remove listeners)
+- Sử dụng WeakMap/WeakReference
+- Null out khi không dùng
+- Monitor memory usage thường xuyên
+- Profile trước khi optimize
+
+Hãy luôn nhớ: **"Premature optimization is the root of all evil"** - Tối ưu khi cần thiết, nhưng đừng quên measure trước! 📊
+
+---
+
+**Bạn đã từng gặp memory leak chưa?** Chia sẻ kinh nghiệm của bạn trong comments nhé! 💬
